--- a/Wzz/Wzz.vcxproj
+++ b/Wzz/Wzz.vcxproj
@@ -70,6 +70,10 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <ExternalIncludePath>C:\Users\E1qas\Downloads\VMProtect\VMProtect\VMProtect 3.8.4.1754\Include\C;$(ExternalIncludePath)</ExternalIncludePath>
+    <LibraryPath>C:\Users\E1qas\Downloads\VMProtect\VMProtect\VMProtect 3.8.4.1754\Lib\Windows;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
